--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^17.0.2",
     "react-csv-downloader": "^2.8.0",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.32.2",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
